Closed Bug 760834 Opened 12 years ago Closed 12 years ago

Fix mIterationCallback initialization order warning

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Fix initialization list warning (obsolete) — Splinter Review
Annoying message, get rid of it.
Attachment #629491 - Flags: review?(chrislord.net)
One more warning around GL provider code
Assignee: nobody → romaxa
Attachment #629491 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #629491 - Flags: review?(chrislord.net)
Attachment #629493 - Flags: review?(chrislord.net)
Attachment #629493 - Flags: review?(bgirard)
Comment on attachment 629493 [details] [diff] [review] Fix initialization list warning and unused variable Thank you
Attachment #629493 - Flags: review?(chrislord.net)
Attachment #629493 - Flags: review?(bgirard)
Attachment #629493 - Flags: review+
Keywords: checkin-needed
Target Milestone: --- → mozilla16
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: