Bug 760834 - Fix mIterationCallback initialization order warning. r=Cwiis